--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
             </div>
             <div class="right-buttons">
                 <div class="operations">
-                    <button>&divide</button>
-                    <button>&times</button>
+                    <button>/</button>
+                    <button>*</button>
                     <button>-</button>
                     <button>+</button>
                 </div>
-                <div class="equality-button">
+                <div class="equals-button">
                     <button>=</button>
                 </div>
             </div>
